@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.2.5-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-02-05 21:47:44, took 00:23:41, with 50 workers, on 4278 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2026-02-05 22:05:39, took 00:13:41, with 50 workers, on 4284 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3736,6 +3736,12 @@ http://sources.freertr.org/cfg/rout-bgp959.tst;rout-bgp959.tst;success;mspw mixe
 http://sources.freertr.org/cfg/rout-bgp960.tst;rout-bgp960.tst;success;mspw mixed over confed bgp
 http://sources.freertr.org/cfg/rout-bgp961.tst;rout-bgp961.tst;success;mspw mixed over bgp route server
 http://sources.freertr.org/cfg/rout-bgp972.tst;rout-bgp972.tst;success;mspw mixed over bgp with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp973.tst;rout-bgp973.tst;success;bgp routemap filtering with destination prefer
+http://sources.freertr.org/cfg/rout-bgp974.tst;rout-bgp974.tst;success;bgp routemap filtering with destination prefer with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp975.tst;rout-bgp975.tst;success;bgp change in destination prefer
+http://sources.freertr.org/cfg/rout-bgp976.tst;rout-bgp976.tst;success;bgp change in destination prefer with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp977.tst;rout-bgp977.tst;success;bgp routepolicy filtering with destination prefer
+http://sources.freertr.org/cfg/rout-bgp978.tst;rout-bgp978.tst;success;bgp routepolicy filtering with destination prefer with soft-reconfig
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
