@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.5-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-05 21:47:44, took 00:23:41, with 50 workers, on 4278 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2026-02-05 22:05:39, took 00:13:41, with 50 workers, on 4284 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3748,6 +3748,12 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp960.tst">rout-bgp960.tst</a></td><td>success</td><td>mspw mixed over confed bgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp961.tst">rout-bgp961.tst</a></td><td>success</td><td>mspw mixed over bgp route server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp972.tst">rout-bgp972.tst</a></td><td>success</td><td>mspw mixed over bgp with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp973.tst">rout-bgp973.tst</a></td><td>success</td><td>bgp routemap filtering with destination prefer</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp974.tst">rout-bgp974.tst</a></td><td>success</td><td>bgp routemap filtering with destination prefer with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp975.tst">rout-bgp975.tst</a></td><td>success</td><td>bgp change in destination prefer</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp976.tst">rout-bgp976.tst</a></td><td>success</td><td>bgp change in destination prefer with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp977.tst">rout-bgp977.tst</a></td><td>success</td><td>bgp routepolicy filtering with destination prefer</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp978.tst">rout-bgp978.tst</a></td><td>success</td><td>bgp routepolicy filtering with destination prefer with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
