@@ -9,7 +9,7 @@
 .bad { color: red }
 </style>
 <title>dataplanes</title></head><body>
-release: freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.<br/>
+release: freeRouter v26.2.5-cur, done by sprscc13@mrn0b0dy.<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>udp</b></td><td><b>dpdk</b></td><td><b>xdp</b></td><td><b>bmv2</b></td><td><b>tofino</b></td><td><b>test</b></td></tr></thead><tbody>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl001.tst">p4lang-acl001.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: copp</td></tr>
@@ -877,4 +877,16 @@ release: freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout512.tst">p4lang-rout512.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td>p4lang: ttlset out</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout513.tst">p4lang-rout513.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td>p4lang: vlan ttlset out</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout514.tst">p4lang-rout514.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td>p4lang: qinq ttlset out</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout515.tst">p4lang-rout515.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout516.tst">p4lang-rout516.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: vlan mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout517.tst">p4lang-rout517.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: bundle vlan mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout518.tst">p4lang-rout518.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: hairpin mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout519.tst">p4lang-rout519.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: hairpin vlan mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout520.tst">p4lang-rout520.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: qinq mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout521.tst">p4lang-rout521.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: bundle qinq mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout522.tst">p4lang-rout522.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: routed mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout523.tst">p4lang-rout523.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: routed vlan mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout524.tst">p4lang-rout524.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: routed qinq mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout525.tst">p4lang-rout525.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: mspw over backplane</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout526.tst">p4lang-rout526.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=good>ok</td><td>p4lang: routed mspw over backplane</td></tr>
 </tbody></table></body></html>
