@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.2.5-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-02-05 11:24:16, took 00:10:09, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2026-02-05 22:16:20, took 00:10:12, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
